# src/controllers/group.controller.ts
@@ -7,6 +7,8 @@ import {
 	SuccessResponse,
 	Tags,
 } from '@tsoa/runtime';
+import { Security } from 'tsoa';
+import { ConversationRepository } from '../repositories/conversation.repository';
 import { GroupRepository } from '../repositories/group.repository';
 import { IGroup } from '../types/documents/group.document';
 import {
@@ -14,22 +16,25 @@ import {
 	IGroupDeleteRequest,
 	IGroupGetRequest,
 	IGroupSaveRequest,
+	IGroupSearchWordRequest,
 } from '../types/requests/group.request';
 import {
 	IGroupAddMemberResponse,
 	IGroupGetResponse,
 	IGroupSaveResponse,
+	IGroupSearchWordResponse,
 } from '../types/responses/group.response';
 import ErrorHandler from '../utils/error';
 
 @Route('group')
-@Tags('Groups')
 export class GroupController {
 	/**
 	 * Save New Group
 	 * @description Save New Group
 	 */
 	@Post('/saveGroup')
+	@Security('api_key')
+	@Tags('Groups')
 	async saveGroup(
 		@Body() Group: IGroupSaveRequest
 	): Promise<IGroupSaveResponse> {
@@ -46,6 +51,8 @@ export class GroupController {
 	 * @description Add member to Group
 	 */
 	@Put('/addMemberToGroup')
+	@Security('api_key')
+	@Tags('Groups')
 	async addMemberToGroup(
 		@Body() addMember: IGroupAddMemberRequest
 	): Promise<IGroupAddMemberResponse> {
@@ -60,7 +67,9 @@ export class GroupController {
 	 * Get Details of  Group
 	 * @description  Get Details of  Group
 	 */
+	@Security('api_key')
 	@Post('/getGroup')
+	@Tags('Groups')
 	async getGroup(
 		@Body() getGroup: IGroupGetRequest
 	): Promise<IGroupGetResponse> {
@@ -70,7 +79,13 @@ export class GroupController {
 		}
 		return group;
 	}
+	/**
+	 * Delete Group
+	 * @description  Delete Group
+	 */
+	@Security('api_key')
 	@Delete('/deleteGroup')
+	@Tags('Groups')
 	@SuccessResponse('200', 'Group Deleted')
 	async deleteGroup(
 		@Body() delGroup: IGroupDeleteRequest
@@ -80,5 +95,30 @@ export class GroupController {
 			throw new ErrorHandler(404, 'Group NOT Found');
 		}
 		return group;
+	}
+	/**
+	 * Search Words in Group
+	 * @description  Search Words in  Group
+	 */
+	@Security('api_key')
+	@Post('/searchWord')
+	@Tags('Search Word')
+	async searchWord(
+		@Body() group: IGroupSearchWordRequest
+	): Promise<IGroupSearchWordResponse[]> {
+		const conversation = await new ConversationRepository().getConversation(
+			group.GroupId
+		);
+		const result: IGroupSearchWordResponse[] = [];
+		conversation?.Messages.map((element) => {
+			if (element.Message.includes(group.Word)) {
+				result.push({
+					User: element.User,
+					Message: element.Message,
+					Time: element.Date,
+				});
+			}
+		});
+		return result;
 	}
 }
